Added model and CSS

--- a/bookstore/index.html
+++ b/bookstore/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Book Store</title>
+
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<h1>My Book Store</h1>
@@ -14,6 +16,7 @@
 
 		<ul id="book-list">
 		</ul>
+		<script src="js/bookstore.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
